<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/fondoregister"
        android:padding="24dp">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="280dp"
            android:layout_height="315dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/user"
            android:clickable="true"
            android:focusable="true" />


        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:hint="@string/nombre"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:hint="@string/correo_electr_nico"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/ageEditText"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:hint="@string/edad"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/registerUserButton"
            android:layout_width="302dp"
            android:layout_height="71dp"
            android:text="@string/registrar"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:text="Volver"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>